<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddCompany">

    <LinearLayout
        android:id="@+id/LayoutHeader"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">
        
        <ImageView
            android:id="@+id/ImageBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            app:tint="@color/colorPrimaryDark" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/add_company"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewSubmit"
        app:layout_constraintTop_toBottomOf="@+id/LayoutHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/we_need_a_few_details_to_add_company"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_15ssp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/type"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/_11ssp" />

                    <Spinner
                        android:id="@+id/SpinnerCompanyType"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_38sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/company_name"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/_11ssp" />

                    <EditText
                        android:id="@+id/InputCompanyName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_38sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:hint="@string/perfect_enterprises"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:textColor="@color/colorText"
                        android:textColorHint="@color/colorhint"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/gstin"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/_11ssp" />

                    <EditText
                        android:id="@+id/InputGSTIN"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_38sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:hint="@string/_27antpa29651zc"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:textColor="@color/colorText"
                        android:textColorHint="@color/colorhint"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/contact_person"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/_11ssp" />

                    <EditText
                        android:id="@+id/InputContactPerson"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_38sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:hint="@string/john"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:textColor="@color/colorText"
                        android:textColorHint="@color/colorhint"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/mobile_no"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/_11ssp" />

                    <EditText
                        android:id="@+id/InputContactMOB"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_38sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:hint="@string/_7045"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="number"
                        android:textColor="@color/colorText"
                        android:textColorHint="@color/colorhint"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/email"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/_11ssp" />

                    <EditText
                        android:id="@+id/inputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_38sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:hint="@string/someone_example_com"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorText"
                        android:textColorHint="@color/colorhint"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/address"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/_11ssp" />

                    <EditText
                        android:id="@+id/inputAddress"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:hint="@string/enter_complete_address"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorText"
                        android:textColorHint="@color/colorhint"
                        android:textSize="@dimen/_13ssp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/textViewSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/submit"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="parent" />






</androidx.constraintlayout.widget.ConstraintLayout>