<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textCompanyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/perfect_enterprises"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/textCompanyName">
        
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"
            app:tint="@color/colorPrimaryDark"/>
        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
             android:hint="@string/search_company"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_13ssp"/>
        


    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerCompany"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/layoutQuickActions"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"/>
    

    <LinearLayout
        android:id="@+id/layoutQuickActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="@+id/perfectSquareText">
        
        <ImageView
            android:id="@+id/imagePerson"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_person"
            app:tint="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/imageBank"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_bank_account"
            app:tint="@color/colorPrimaryDark"
            android:layout_marginLeft="@dimen/_15sdp" />



    </LinearLayout>
    <ImageView
        android:id="@+id/ImageAddPerson"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/background_add_btn"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_person_add"
        app:tint="@color/colorPrimaryDark"
        android:layout_marginRight="@dimen/_30sdp"
        app:layout_constraintBottom_toTopOf="@+id/layoutQuickActions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutQuickActions"/>
    <TextView
        android:id="@+id/perfectSquareText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/powered_by_perfectsquare"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/ubuntu_regular"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>